# homework_7

./: README.md  main.py  my_select.py  pyproject.toml  requirements.txt
alembic/versions/: 0f244e7aa201_init.py  e19a95757c1d_tables_created.py
conf/: db.py  models.py
seeds/: seed.py
