[tool.poetry]
name = "homework-7"
version = "0.1.0"
description = ""
authors = ["TosLICK <anatosliy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "2.0.30"
faker = "25.8.0"
psycopg2 = "2.9.9"
alembic = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
